testdata/de/dm/intellij/liferay/language/jsp/LiferayJspJavaDeprecationInspectionTest/mystaticmethoddeprecation.jsp
<%@ page import="com.liferay.portal.kernel.service.AddressLocalServiceUtil" %>

<%
    <warning descr="Adress column typeId has been renamed to listTypeId. (see LPS-162437)">AddressLocalServiceUtil.<error descr="Cannot resolve method 'getTypeAddresses' in 'AddressLocalServiceUtil'">getTypeAddresses</error>()</warning>;
%>
